<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:layout_editor_absoluteX="121dp"
    tools:layout_editor_absoluteY="84dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Drum.Home">
    <Button
        android:id="@+id/btnmmgcft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/colorPrimary"
        android:drawableEnd="@drawable/rulerwhite"
        android:padding="10dp"
        android:text="@string/fmm"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/finch"
        android:background="@drawable/button_shape"
        android:textStyle="bold"
        android:textSize="20sp"
        android:backgroundTint="@color/colorPrimary"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:drawableEnd="@drawable/rulerwhite"
        android:layout_margin="10dp" android:layout_marginTop="73dp"
        app:layout_constraintTop_toBottomOf="@+id/btnmmgcft" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="9dp"
        android:id="@+id/btninchcft"/>
    <TextView
        android:text="@string/wdc_full"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:visibility="gone"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:layout_height="wrap_content"
        android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="9dp"/>
    <Button
        android:text="@string/converter"
        android:layout_margin="10dp"
        android:background="@drawable/button_shape"
        android:textStyle="bold"
        android:textSize="20sp"
        android:backgroundTint="@color/colorPrimary"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:drawableEnd="@drawable/ic_coverter_white_24dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnaddparty" android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/btninchcft" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="9dp" android:layout_marginEnd="9dp"/>
    <Button
        android:text="@string/viewsavedata"
        android:layout_width="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/button_shape"
        android:textStyle="bold"
        android:textSize="20sp"
        android:backgroundTint="@color/colorPrimary"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:drawableEnd="@drawable/ic_view_list_white_24dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnviewdata"
        app:layout_constraintTop_toBottomOf="@+id/btnaddparty" android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="9dp" android:layout_marginEnd="9dp"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:text="@string/addparty"
        android:layout_width="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/button_shape"
        android:textStyle="bold"
        android:textSize="20sp"
        android:visibility="gone"
        android:backgroundTint="@color/colorPrimary"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:drawableEnd="@drawable/ic_add_black_24dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnviewalldrumlist" android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/btnviewdata" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="9dp" android:layout_marginEnd="9dp"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_order"
        android:background="@drawable/button_shape"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:backgroundTint="@color/colorPrimary"
        android:drawableEnd="@drawable/icons8purchaseorderfilled24"
        android:id="@+id/btncreateorder"
        android:layout_marginStart="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="9dp" android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/btnviewalldrumlist"/>

    <Button
        android:id="@+id/btnbackup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="11dp"
        android:visibility="gone"
        android:layout_marginEnd="9dp"
        android:text="@string/backup_restore"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/colorPrimary"
        android:drawableEnd="@drawable/ic_settings_backup_restore_black_24dp"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncreateorder" />
    <Button
        android:text="@string/about_us"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/colorPrimary"
        android:drawableEnd="@drawable/ic_info_outline_whitek_24dp"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnaboutus"
        app:layout_constraintStart_toStartOf="@+id/btncreateorder" android:layout_marginTop="11dp"
        android:layout_marginStart="9dp"
        app:layout_constraintTop_toBottomOf="@+id/btnbackup" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="9dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
